Added Sentry - FrontMatter - Updated Metadata

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,23 @@
 ---
-name: Tails Azimuth
+name: Uniskela
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: Novice Developer
+email: hi@uniskela.life
+twitter: https://twitter.com/uniskela
+github: https://github.com/uniskela
+facebook: https://facebook.com/uniskela
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+The Uniskela brand was created by an individual that is searching for the understandings of life by questioning the interesting topics from within.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+To be more specific, our blog serves as a platform where we share our insights on a variety of topics including:
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+The Importance of Mental Health
+The Art of Unlearning Limiting Beliefs
+Benefits of Meditation and Mindfulness
+The Relationship Between Mind and Body
+Understanding the Nature of Consciousness
+Achieving a Deeper State of Awareness
+We are committed to providing high-quality, informative, and engaging content. Our blog posts are designed to educate and inspire you on your journey to self-awareness and personal growth.
+
+Stay updated with our latest posts by subscribing to our blog, and follow us on our social media channels for more insights.
