Added giscus, klaviyo and further author info

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,7 +1,7 @@
 ---
 name: Uniskela
 avatar: /static/images/avatar.png
-occupation: Novice Developer
+occupation: Let's learn life!
 email: hi@uniskela.life
 twitter: https://twitter.com/uniskela
 github: https://github.com/uniskela
